--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
-@import 'bootstrap-sass';
-@import 'bootstrap-material-design';
+@import "bootstrap-sass";
+@import "bootstrap-material-design";
+@import "font-awesome";
+
+@import "theme";
+@import "shared/_header";
