--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -6,3 +6,41 @@ body {
   color: #999;
   background-color: #fff;
 }
+
+a {
+  color: #ccb68d;
+  text-decoration: none;
+  background-color: transparent;
+
+  &:-webkit-any-link {
+    color: -webkit-link;
+    text-decoration: underline;
+    cursor: auto;
+  }
+}
+
+.btn-primary {
+  background: #ccb68d linear-gradient(to bottom, #ccb68d, #c9b38a);
+  border-color: #ccb68d;
+  color: #fff;
+}
+
+.btn {
+  font-size: 13px;
+  padding: 18px 25px;
+  border-width: 2px;
+  border-radius: 2px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  transition: all 100ms ease-out;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  line-height: 1.57;
+  -webkit-user-select: none;
+}
