--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -1,335 +1,64 @@
 .shared-header-container {
-  .img-responsive {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-
-  img {
-    vertical-align: middle;
-    border: 0;
-  }
-
-  .header__logo {
-    img {
-      display: inline-block;
-      width: 60%;
-    }
-  }
-
-  .header__right-widgets {
-    -webkit-order: 4;
-    -ms-flex-order: 4;
-    order: 4;
-    width: 100%;
-  }
-
-  .fa-3x {
-    font-size: 3em;
-  }
-
-  .fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  .icon-box {
-    display: inline-block;
-    color: #999;
-    transition: all 100ms ease-out;
-
-    .fa {
-      font-size: 20px;
-      margin-right: 10px;
-      transition: all 100ms ease-out;
-    }
-  }
-
-  .icon-box__title {
-    font-size: 18px;
-    margin: 6px 0;
-    transition: all 100ms ease-out;
-  }
-
-  .container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-
-    &:before, &:after {
-      content: " ";
-      display: table;
-    }
-
-    &:after {
-      clear: both;
-    }
-  }
-
-  .top__tagline {
-    float: left;
-  }
-
-  .top__widgets {
-    float: right;
-  }
-
-  .top {
+  .top-bar {
     color: #999999;
     background-color: #f7f7f7;
-    border-bottom: 1px solid #eee;
-    font-size: 13px;
-    padding: 14px 0;
+    border-bottom: 1px solid #efefef;
+    font-weight: 300;
+    line-height: 50px;
 
-    .icon-box__text {
-      display: inline-block;
-      vertical-align: middle;
-    }
-
-    .icon-box__title {
-      display: inline-block;
-      font-size: 13px;
-      font-family: "Roboto", Helvetica, Arial, sans-serif;
-      font-weight: normal;
-      color: #999;
-      margin: 0;
-      transition: all 100ms ease-out;
-    }
-
-    .icon-box {
-      .fa {
-        font-size: 21px;
-        padding: 0;
-        margin-right: 6px;
-        margin-top: 0;
-        vertical-align: middle;
-        line-height: 0;
-        color: #999999;
-        transition: all 100ms ease-out;
-      }
-    }
-
-    .social-icons__link {
-      color: #999999;
-
-      .fa {
-        font-size: 21px;
-        vertical-align: middle;
-        margin-right: 4px;
-      }
-
-      &:hover {
-        color: #ccb68d;
-      }
-    }
-
-    .widget {
-      position: relative;
-      padding-top: 10px;
-      margin-top: 10px;
-      border-top: 1px solid rgba(0, 0, 0, 0.06);
-
-      &:after {
-        position: absolute;
-        content: '';
-        background-color: rgba(0, 0, 0, 0.06);
-        width: 1px;
-        height: 50px;
-        right: 0;
-        top: -15px;
-      }
-    }
-  }
-
-  .header {
-    color: #777777;
-    position: relative;
-    z-index: 210;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    margin-top: 25px;
-    margin-bottom: 20px;
-
-    .header__left-widgets, .header__logo, .header__right-widgets {
-      background-color: #ffffff;
-    }
-
-    .header__left-widgets {
-      -webkit-order: 3;
-      -ms-flex-order: 3;
-      order: 3;
-      width: 100%;
-    }
-
-    .widget-icon-box {
-      margin-top: 10px;
-    }
-
-    .widget {
-      position: relative;
-      margin-top: 20px;
-      padding-top: 20px;
-      border-top: 1px solid rgba(0, 0, 0, 0.06);
-    }
-
-    .icon-box {
-      .fa-phone-square {
-        margin-top: -3px;
-      }
-
-      .fa {
-        float: left;
-        padding: 0;
-        font-size: 40px;
-        color: #ddd;
-        background-color: transparent;
-        margin-right: 5px;
-        margin-top: 0;
-      }
-    }
-
-    .icon-box__text {
-      margin-left: 45px;
-    }
-
-    .icon-box__title {
-      color: #777777;
-      margin: 0;
-      font-size: 15px;
-      font-family: "Roboto",Helvetica,Arial,sans-serif;
-      color: #777;
-    }
-
-    .icon-box__subtitle {
-      color: #989898;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .container {
-      width: 760px;
-    }
-  }
-
-  @media (min-width: 480px) {
-    .header__logo {
-      img {
-        width: auto;
-      }
-    }
-  }
-
-  @media (min-width: 1200px) {
-    .container {
-      width: 1180px;
-    }
-  }
-
-  @media (min-width: 992px) {
-    .container {
-      width: 980px;
-    }
-
-    .top {
-      .widget {
-        padding-right: 20px;
-        margin-right: 20px;
-        padding-top: 0;
-        margin-top: 0;
-        border-top: 0;
-        display: inline-block;
-
-        &:after {
-          position: absolute;
-          content: '';
-          background-color: rgba(0, 0, 0, 0.06);
-          width: 1px;
-          height: 50px;
-          right: 0;
-          top: -15px;
-        }
-      }
-    }
-
-    .top__tagline {
+    .tagline {
       float: left;
     }
-
-    .top__widgets {
+    .widgets {
       float: right;
-    }
-
-    .header__logo {
-      order: 2;
-      width: 30%;
-      text-align: center;
-      margin-bottom: 0;
-
-      img {
-        margin-top: 5px;
-      }
-    }
-
-    .header__right-widgets {
-      -webkit-order: 3;
-      -ms-flex-order: 3;
-      order: 3;
-      -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-      justify-content: flex-end;
-    }
-
-    .header {
-      margin-bottom: 0;
-
-      .header__right-widgets {
-        padding: 25px 0;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        width: 35%;
-      }
-
-      .header__left-widgets {
-        -webkit-order: 1;
-        -ms-flex-order: 1;
-        order: 1;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-      }
 
       .widget {
         float: left;
-        padding-top: 0;
         padding-right: 20px;
-        margin-top: 0;
-        margin-right: 20px;
-        border-top: 0;
-        display: inline-block;
+        padding-left: 20px;
+        border-right: 1px solid #e0e0e0;
 
-        &:after {
-          position: absolute;
-          content: '';
-          background-color: rgba(0, 0, 0, 0.06);
-          height: 40px;
-          width: 1px;
-          top: 0;
-          right: 0;
+        &.working-hours, &.email, &.address {
+          &:before {
+            font-family: FontAwesome;
+            font-size: 21px;
+            -webkit-font-smoothing: antialiased;
+            vertical-align: middle;
+          }
         }
 
-        &:last-child {
+        &.working-hours {
+          padding-left: 0;
+
+          &:before {
+            content: "\f017";
+          }
+        }
+        &.email {
+          &:before {
+            content: "\f003";
+          }
+        }
+
+        &.address {
+          &:before {
+            content: "\f015";
+          }
+        }
+
+        &.social-links {
           padding-right: 0;
-          margin-right: 0;
+          border-right: none;
+
+          .social-icon {
+            padding-right: 5px;
+            font-size: 21px;
+            color: #999999;
+
+            &:hover {
+              color: #ccb68d;
+            }
+          }
         }
       }
     }
