--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -13,3 +13,27 @@
             = fa_icon 'twitter-square'
           = link_to '#', class: 'social-icon', target: '_blank' do
             = fa_icon 'youtube-square'
+
+  .container
+    .header
+      .row
+        .col-md-4
+          .phones
+            .row
+              .col-md-6
+                .widget.hotline
+                  = fa_icon 'headphones'
+                  .text
+                  h4 0908362606
+                  span Hotline
+
+              .col-md-6
+                .widget
+                  = fa_icon 'phone-square'
+                  .text
+                    h4 0837100638
+                    span HCM's Office
+
+
+      .logo
+      .contact-us
