--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -1,4 +1,5 @@
 head
+  title Khang Hai Lawfirm
   meta http-equiv="X-UA-Compatible" content="IE=edge"
   meta name="viewport" content="width=device-width, initial-scale=1"
   link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'
