--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -96,5 +96,71 @@
         }
       }
     }
+
+    .logo {
+      img {
+        margin: 0 auto;
+      }
+    }
+
+    .contact-us {
+      margin-top: 25px;
+
+      .free-consultation {
+        float: right;
+        font-weight: 500;
+        color: #fff;
+        background: #ccb68d linear-gradient(to bottom,#ccb68d,#c9b38a);
+        border-color: #ccb68d;
+        font-size: 13px;
+        padding: 18px 25px;
+        border-width: 2px;
+        border-radius: 2px;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    .navigation {
+      .navbar {
+        border: 5px solid #45414d;
+        box-shadow: 0 0 0 1px rgba(250, 250, 250, 0.2) inset;
+        background-color: #45414d;
+        margin-top: 25px;
+
+        .navbar-nav {
+          display: inline-block;
+          float: none;
+          li > a {
+            font-family: "Alegreya", Georgia, "Times New Roman", Times, serif;
+            padding: 30.5px 30px;
+            font-size: 19px;
+          }
+        }
+
+        .navbar-collapse {
+          text-align: center;
+
+          .dropdown-menu {
+            margin-top: 11px;
+            padding: 0;
+            
+            li > a {
+              padding: 12px 38px 12px 18px;
+              color: #fff;
+              font-size: 14px;
+              border-color: #bfa980;
+              background-color: #ccb68d;
+              border-bottom: 1px solid #c3a878;
+              min-width: 150px;
+              white-space: nowrap;
+
+              &:hover {
+                background-color: #c3a878;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
