--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -20,20 +20,51 @@
         .col-md-4
           .phones
             .row
-              .col-md-6
+              .col-xs-6
                 .widget.hotline
                   = fa_icon 'headphones'
                   .text
                   h4 0908362606
                   span Hotline
 
-              .col-md-6
+              .col-xs-6
                 .widget
                   = fa_icon 'phone-square'
                   .text
                     h4 0837100638
                     span HCM's Office
 
+        .col-md-4
+          .logo
+            = link_to (image_tag 'logo.jpg', class: 'img-responsive'), root_url
 
-      .logo
-      .contact-us
+        .col-md-4
+          .contact-us
+            = link_to 'GET A FREE CONSULTATION', '#', class: 'free-consultation'
+
+      .row
+        .navigation
+          .nav.navbar.navbar-default
+            .navbar-header
+              button.navbar-toggle.collapsed aria-expanded="false" data-target=".navbar-collapse" data-toggle="collapse" type="button"
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            .collapse.navbar-collapse
+              ul.nav.navbar-nav
+                li = link_to "Home", root_url
+                li.dropdown
+                  a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
+                    | Our Services
+                    span.caret
+                  ul.dropdown-menu
+                    li = link_to 'Criminal Law', '#'
+                    li = link_to 'Civil Rights Law', '#'
+                    li = link_to 'Corporate Law', '#'
+                    li = link_to 'Personal Injury Law', '#'
+                    li = link_to 'Bankruptcy Law', '#'
+                    li = link_to 'Family Law', '#'
+                li = link_to "About Us", '#'
+                li = link_to "News", '#'
+                li = link_to "Contact us", '#'
