--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -3,9 +3,12 @@
     .container
       .tagline Khang Hai Lawfirm
       .widgets
-        .widget.working-hours Mon - Sat: 7:00 - 17:00
-        .widget.email lskhanghai@gmail.com
-        .widget.address 1/4D Bà Triệu, ấp Đình, xã Tân Xuân, huyện Hóc Môn, TP. HCM
+        .widget.working-hours
+          h4 Mon - Sat: 7:00 - 17:00
+        .widget.email
+          h4 lskhanghai@gmail.com
+        .widget.address
+          h4 1/4D Bà Triệu, ấp Đình, xã Tân Xuân, huyện Hóc Môn, TP. HCM
         .widget.social-links
           = link_to '#', class: 'social-icon', target: '_blank' do
             = fa_icon 'facebook-square'
