--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -4,11 +4,17 @@
       .tagline Khang Hai Lawfirm
       .widgets
         .widget.working-hours
+          = fa_icon 'clock-o'
           h4 Mon - Sat: 7:00 - 17:00
+
         .widget.email
+          = fa_icon 'envelope-o'
           h4 lskhanghai@gmail.com
+
         .widget.address
+          = fa_icon 'home'
           h4 1/4D Bà Triệu, ấp Đình, xã Tân Xuân, huyện Hóc Môn, TP. HCM
+
         .widget.social-links
           = link_to '#', class: 'social-icon', target: '_blank' do
             = fa_icon 'facebook-square'
