--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -1,8 +1,8 @@
 .shared-header-container {
   .top-bar {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #efefef;
-    color: #999999;
+    background-color: $white-smoke;
+    border-bottom: 1px solid $darker-white-smoke;
+    color: $nobel;
     font-size: 13px;
     font-weight: 400;
     padding: 14px 0;
@@ -15,67 +15,44 @@
       float: right;
 
       .widget {
+        border-right: 1px solid $gainsboro;
+        float: left;
         padding-left: 20px;
         padding-right: 20px;
-        border-right: 1px solid #e0e0e0;
-        float: left;
+      }
+    }
 
-        &.working-hours, &.email, &.address {
-          h4 {
-            &:before {
-              font-family: FontAwesome;
-              font-size: 21px;
-              vertical-align: middle;
-              -webkit-font-smoothing: antialiased;
-            }
+    .widget {
+      &.working-hours,
+      &.email,
+      &.address {
+        h4 {
+          display: inline-block;
+          font-size: 13px;
+          font-weight: 400;
+          margin: 0;
+        }
+      }
 
-            font-size: 13px;
-            margin: 0;
-            font-weight: 400;
-            display: inline-block;
-          }
+      &.working-hours {
+        padding-left: 0;
+      }
+
+      &.social-links {
+        border-right: 0;
+        padding-right: 0;
+
+        .fa {
+          font-size: 21px;
+          margin-right: 5px;
+          vertical-align: middle;
         }
 
-        &.working-hours {
-          padding-left: 0;
+        .social-icon {
+          color: $nobel;
 
-          h4 {
-            &:before {
-              content: "\f017";
-            }
-          }
-        }
-        &.email {
-          h4 {
-            &:before {
-              content: "\f003";
-            }
-          }
-        }
-
-        &.address {
-          h4 {
-            &:before {
-              content: "\f015";
-            }
-          }
-        }
-
-        &.social-links {
-          padding-right: 0;
-          border-right: none;
-
-          .fa {
-            font-size: 21px;
-            vertical-align: middle;
-            margin-right: 5px;
-          }
-          .social-icon {
-            color: #999999;
-
-            &:hover {
-              color: #ccb68d;
-            }
+          &:hover {
+            color: $tan;
           }
         }
       }
@@ -87,31 +64,31 @@
 
     .phones {
       padding: 25px 0;
+    }
 
-      .widget {
-        .fa {
-          font-size: 40px;
-          background-color: transparent;
-          color: #ddd;
-          margin-right: 5px;
-          float: left;
-        }
+    .widget {
+      .fa {
+        background-color: transparent;
+        color: $gainsboro;
+        float: left;
+        font-size: 40px;
+        margin-right: 5px;
+      }
 
-        h4 {
-          font-size: 15px;
-          font-weight: 500;
-          color: #777777;
-          padding-top: 5px;
-          margin: 0;
-        }
+      h4 {
+        color: $grey;
+        font-size: 15px;
+        font-weight: 500;
+        margin: 0;
+        padding-top: 5px;
+      }
 
-        span {
-          color: #989898;
-        }
+      span {
+        color: $nobel;
+      }
 
-        &.hotline {
-          border-right: 1px solid #e0e0e0;
-        }
+      &.hotline {
+        border-right: 1px solid $gainsboro;
       }
     }
 
@@ -125,56 +102,56 @@
       margin-top: 25px;
 
       .free-consultation {
-        font-weight: 500;
-        background: #ccb68d linear-gradient(to bottom,#ccb68d,#c9b38a);
-        color: #fff;
-        padding: 18px 25px;
-        border-width: 2px;
-        border-color: #ccb68d;
+        background: $tan linear-gradient(to bottom, $tan, $darker-tan);
+        border-color: $tan;
         border-radius: 2px;
+        border-width: 2px;
+        color: $white;
         float: right;
-        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        font-weight: 500;
+        padding: 18px 25px;
+        text-shadow: 0 1px 1px $transparent-black-10;
       }
     }
 
     .navigation {
       .navbar {
-        background-color: #45414d;
-        box-shadow: 0 0 0 1px rgba(250, 250, 250, 0.2) inset;
+        background-color: $grape;
+        border: 5px solid $grape;
+        box-shadow: 0 0 0 1px $transparent-white-20 inset;
         margin-top: 25px;
-        border: 5px solid #45414d;
 
         .navbar-nav {
           display: inline-block;
           float: none;
+        }
 
-          li > a {
-            font-family: "Alegreya", Georgia, "Times New Roman", Times, serif;
-            font-size: 19px;
-            padding: 30.5px 30px;
-          }
+        li > a {
+          font-family: 'Alegreya', Georgia, 'Times New Roman', Times, serif;
+          font-size: 19px;
+          padding: 30.5px 30px;
         }
 
         .navbar-collapse {
           text-align: center;
+        }
 
-          .dropdown-menu {
-            padding: 0;
-            margin-top: 11px;
+        .dropdown-menu {
+          margin-top: 11px;
+          padding: 0;
 
-            li > a {
-              font-size: 14px;
-              background-color: #ccb68d;
-              color: #fff;
-              padding: 12px 38px 12px 18px;
-              border-color: #bfa980;
-              border-bottom: 1px solid #c3a878;
-              min-width: 150px;
-              white-space: nowrap;
+          li > a {
+            background-color: $tan;
+            border-bottom: 1px solid $putty;
+            border-color: $pavlova;
+            color: $white;
+            font-size: 14px;
+            min-width: 150px;
+            padding: 12px 38px 12px 18px;
+            white-space: nowrap;
 
-              &:hover {
-                background-color: #c3a878;
-              }
+            &:hover {
+              background-color: $putty;
             }
           }
         }
