--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -4,7 +4,7 @@ $darker-white-smoke: #efefef;
 $nobel: #999;
 $gainsboro: #e0e0e0;
 $tan: #ccb68d;
-$darker-tan: #ccb68d;
+$darker-tan: #c9b38a;
 $grey: #777;
 $grape: #45414d;
 $putty: #c3a878;
