--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,10 @@
 doctype html
 html
   = render 'layouts/head'
+
   body
     header
       = render 'shared/header'
 
-    .container
+    main
       = yield
