--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -14,6 +14,7 @@
               | Among the neither know how to bestow
             p
               = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              | &nbsp;
               = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
 
     .item
@@ -30,6 +31,7 @@
               | Among the neither know how to bestow
             p
               = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              | &nbsp;
               = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
 
     .item
@@ -46,11 +48,12 @@
               | Among the neither know how to bestow
             p
               = link_to 'GET IN TOUCH', '#', class: 'btn btn-raised btn-primary'
+              | &nbsp;
               = link_to 'GET MORE', '#', class: 'btn btn-raised btn-default'
 
 coffee:
   $('.slider').slick
-    dots: true
+    dots: false
     infinite: true
     slidesToShow: 1
     slidesToScroll: 1
