--- a/app/assets/stylesheets/home/_slider.scss
+++ b/app/assets/stylesheets/home/_slider.scss
@@ -4,6 +4,13 @@
     text-align: center;
   }
 
+  img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+    width: 100%;
+  }
+
   .content {
     position: absolute;
     top: 100px;
@@ -37,6 +44,10 @@
         font-size: 16px;
         font-weight: normal;
         margin: 0 0 10.5px;
+      }
+
+      a {
+        padding: 18px 25px;
       }
     }
   }
