Add introduction and our services sections to home page

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,4 +1,5 @@
 $white: #fff;
+$lighter-white: #fdfdfd;
 $white-smoke: #f7f7f7;
 $darker-white-smoke: #efefef;
 $nobel: #999;
@@ -7,8 +8,13 @@ $tan: #ccb68d;
 $darker-tan: #c9b38a;
 $grey: #777;
 $grape: #45414d;
+$brown: #45423d;
 $putty: #c3a878;
+$darkder-putty: #a69067;
 $pavlova: #bfa980;
 
+$transparent-black-8: rgba(0, 0, 0, .08);
 $transparent-black-10: rgba(0, 0, 0, .1);
 $transparent-white-20: rgba(250, 250, 250, .2);
+$transparent-white-33: rgba(250, 250, 250, .33);
+$transparent-white-50: rgba(250, 250, 250, .5);
