--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,20 +1,19 @@
 body {
+  background-color: $white;
+  color: $nobel;
   font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.57;
-  color: #999;
-  background-color: #fff;
 }
-
 
 .btn {
   border: 1px solid transparent;
+  border-radius: 2px;
+  border-width: 2px;
   font-size: 13px;
   padding: 18px 25px;
-  border-width: 2px;
-  border-radius: 2px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 1px 1px $transparent-black-10;
   transition: all 100ms ease-out;
 }
 
@@ -38,14 +37,14 @@ body {
 
 .btn.btn-raised.btn-default {
   background-color: transparent;
-  border-color: rgba(250, 250, 250, 0.33) !important;
-  color: #fff;
+  border-color: $transparent-white-33 !important;
   box-shadow: none;
+  color: $white;
 }
 
 .btn.btn-raised:not(.btn-link):hover.btn-default {
   background-color: transparent;
-  border-color: rgba(250, 250, 250, 0.5) !important;
+  border-color: $transparent-white-50 !important;
 }
 
 .btn-group-raised .btn:not(.btn-link).active.btn-default {
@@ -54,4 +53,15 @@ body {
 
 .btn.btn-raised:not(.btn-link):focus.btn-default {
   background-color: transparent;
+}
+
+h3,
+h4,
+h5 {
+  color: $brown;
+  font-family: 'Alegreya', Georgia, 'Times New Roman', Times, serif;
+}
+
+p {
+  margin: 0 0 10.5px;
 }
