Add internship and team sections to home page

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -6,6 +6,7 @@ $nobel: #999;
 $gainsboro: #e0e0e0;
 $tan: #ccb68d;
 $darker-tan: #c9b38a;
+$light-grey: #b2b1b5;
 $grey: #777;
 $grape: #45414d;
 $brown: #45423d;
