Update team section and add our pathway and news sections

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -4,6 +4,7 @@ $white-smoke: #f7f7f7;
 $darker-white-smoke: #efefef;
 $nobel: #999;
 $gainsboro: #e0e0e0;
+$darker-gainsboro: #e6e6e6;
 $tan: #ccb68d;
 $darker-tan: #c9b38a;
 $light-grey: #b2b1b5;
