--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,5 @@
 @import 'home/introduction';
 @import 'home/our_services';
 @import 'home/internship';
+@import 'home/team';
+@import 'home/our_pathway';
