--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -65,3 +65,40 @@ h5 {
 p {
   margin: 0 0 10.5px;
 }
+
+.widget {
+  .title {
+    font-size: 36px;
+    line-height: 1.2;
+    margin-bottom: 25px;
+    margin-top: 0;
+  }
+
+  .read-more {
+    color: $tan;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+
+    &:hover {
+      color: $darkder-putty
+    }
+  }
+}
+
+.widget-title--big {
+  .widget-title {
+    font-size: 46px;
+    line-height: 1.2;
+    margin-bottom: 25px;
+    position: relative;
+  }
+
+  .widget-title__line {
+    border-bottom: 1px solid $transparent-black-8;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    left: 221px;
+  }
+}
