Update home page

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,6 @@
 $white: #fff;
 $lighter-white: #fdfdfd;
+$lightest-white: rgb(230, 230, 230);
 $white-smoke: #f7f7f7;
 $darker-white-smoke: #efefef;
 $nobel: #999;
@@ -11,6 +12,7 @@ $light-grey: #b2b1b5;
 $grey: #777;
 $grape: #45414d;
 $brown: #45423d;
+$dark-grape: #393640;
 $putty: #c3a878;
 $darkder-putty: #a69067;
 $pavlova: #bfa980;
@@ -20,3 +22,4 @@ $transparent-black-10: rgba(0, 0, 0, .1);
 $transparent-white-20: rgba(250, 250, 250, .2);
 $transparent-white-33: rgba(250, 250, 250, .33);
 $transparent-white-50: rgba(250, 250, 250, .5);
+$transparent-white-60: rgba(250, 250, 250, .6);
