--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,15 @@
 @import 'variables';
 @import 'theme';
 @import 'shared/header';
+@import 'shared/footer';
 @import 'home/slider';
 @import 'home/introduction';
 @import 'home/our_services';
 @import 'home/internship';
 @import 'home/team';
 @import 'home/our_pathway';
+@import 'home/news';
+@import 'home/new';
+@import 'home/clients';
+@import 'home/map';
+@import 'home/statistics';
