--- a/app/views/home/_news.html.slim
+++ b/app/views/home/_news.html.slim
@@ -6,3 +6,26 @@
           h3.widget-title
             span.widget-title__inline The News
             span.widget-title__line
+      .col-md-12
+        .row
+          = render 'new'
+          = render 'new'
+
+          .col-md-4
+            .latest-news__container
+              = link_to '#', class: 'latest-news latest-news--inline' do
+                .latest-news__content
+                  h4.latest-news__title What services are available for crime victims
+                  .latest-news__full-date July 24, 2015
+
+              = link_to '#', class: 'latest-news latest-news--inline' do
+                .latest-news__content
+                  h4.latest-news__title What services are available for crime victims
+                  .latest-news__full-date July 24, 2015
+
+              = link_to '#', class: 'latest-news latest-news--inline' do
+                .latest-news__content
+                  h4.latest-news__title What services are available for crime victims
+                  .latest-news__full-date July 24, 2015
+
+              = link_to 'More news', '#', class: 'latest-news latest-news--more-news'
