Update header partial

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,9 +1,11 @@
 $white: #fff;
+$darker-white: #ddd;
 $lighter-white: #fdfdfd;
 $lightest-white: rgb(230, 230, 230);
 $white-smoke: #f7f7f7;
 $darker-white-smoke: #efefef;
 $nobel: #999;
+$lighter-nobel: #989898;
 $gainsboro: #e0e0e0;
 $darker-gainsboro: #e6e6e6;
 $tan: #ccb68d;
@@ -14,9 +16,16 @@ $grape: #45414d;
 $brown: #45423d;
 $dark-grape: #393640;
 $putty: #c3a878;
+$lightest-putty: #bc9f6a;
 $darkder-putty: #a69067;
 $pavlova: #bfa980;
+$lighter-yellow: #b99b63;
+$darker-yellow: #b19051;
+$more-darker-brown: #967943;
 
+
+$transparent-black-1: rgba(0, 0, 0, .125);
+$transparent-black-6: rgba(0, 0, 0, .06);
 $transparent-black-8: rgba(0, 0, 0, .08);
 $transparent-black-10: rgba(0, 0, 0, .1);
 $transparent-white-20: rgba(250, 250, 250, .2);
