--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,8 +1,8 @@
 .shared-header-container
-  .top-bar
+  .top
     .container
-      .tagline Khang Hai Lawfirm
-      .widgets
+      .top__tagline Khang Hai Lawfirm
+      .top__widgets
         .widget.working-hours
           = fa_icon 'clock-o'
           h4 Mon - Sat: 7:00 - 17:00
@@ -25,55 +25,48 @@
 
   .container
     .header
-      .row
-        .col-md-4
-          .phones
-            .row
-              .col-xs-6
-                .widget.hotline
-                  = fa_icon 'headphones'
-                  .text
-                  h4 0908362606
-                  span Hotline
+      .header__left-widgets
+        .widget.widget-icon-box
+          .icon-box
+            = fa_icon 'phone-square'
+            .icon-box__text
+              h4.icon-box__title 0908362606
+              span.icon-box__subtitle Hotline
 
-              .col-xs-6
-                .widget
-                  = fa_icon 'phone-square'
-                  .text
-                    h4 0837100638
-                    span HCM's Office
+        .widget.widget-icon-box
+          .icon-box
+            = fa_icon 'headphones'
+            .icon-box__text
+              h4.icon-box__title 0837100638
+              span.icon-box__subtitle HCM's Office
 
-        .col-md-4
-          .logo
-            = link_to (image_tag 'logo.jpg', class: 'img-responsive'), root_url
+      .header__logo
+        = link_to (image_tag 'logo.jpg'), root_url
+        button.navbar-toggle type='button' data-toggle='collapse' data-target='#legalpress-navbar-collapse'
+          span.navbar-toggle__text MENU
+          span.navbar-toggle__icon-bar
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
 
-        .col-md-4
-          .contact-us
-            = link_to 'GET A FREE CONSULTATION', '#', class: 'free-consultation'
+      .header__right-widgets
+        .widget.widget_text
+          .textwidget
+            = link_to 'GET A FREE CONSULTATION', '#', class: 'btn btn-raised btn-primary'
 
-      .row
-        .navigation
-          .nav.navbar.navbar-default
-            .navbar-header
-              button.navbar-toggle.collapsed aria-expanded="false" data-target=".navbar-collapse" data-toggle="collapse" type="button"
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-            .collapse.navbar-collapse
-              ul.nav.navbar-nav
-                li = link_to "Home", root_url
-                li.dropdown
-                  a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
-                    | Our Services
-                    span.caret
-                  ul.dropdown-menu
-                    li = link_to 'Criminal Law', '#'
-                    li = link_to 'Civil Rights Law', '#'
-                    li = link_to 'Corporate Law', '#'
-                    li = link_to 'Personal Injury Law', '#'
-                    li = link_to 'Bankruptcy Law', '#'
-                    li = link_to 'Family Law', '#'
-                li = link_to "About Us", '#'
-                li = link_to "News", '#'
-                li = link_to "Contact us", '#'
+      .header__navigation
+        nav.collapse.navbar-collapse aria-label='Main Menu' id='legalpress-navbar-collapse'
+          ul#menu-main-menu class='main-navigation js-main-nav' role='menubar'
+            li = link_to "Home", root_url
+            li.has-children
+              = link_to 'Our Services', '#'
+              ul.sub-menu
+                li = link_to 'Criminal Law', '#'
+                li = link_to 'Civil Rights Law', '#'
+                li = link_to 'Corporate Law', '#'
+                li = link_to 'Personal Injury Law', '#'
+                li = link_to 'Bankruptcy Law', '#'
+                li = link_to 'Family Law', '#'
+            li = link_to "About Us", '#'
+            li = link_to "News", '#'
+            li = link_to "Contact us", '#'
