Update deploy file

--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -331,6 +331,24 @@
             top: 50%;
             right: -5px;
           }
+
+          &:after {
+            &:before {
+              content: '';
+            }
+          }
+
+          &.active {
+            &:after {
+              background-color: $tan;
+              content: '';
+              position: absolute;
+              width: calc(100% - 60px);
+              height: 5px;
+              left: 30px;
+              bottom: 0;
+            }
+          }
         }
 
         &.has-children {
